--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-Copyright 2008 Kevin Ryde
+Copyright 2008, 2010 Kevin Ryde
 
 This file is part of Gtk2-Ex-TiedListColumn.
 
@@ -16,6 +16,9 @@ You should have received a copy of the GNU General Public License along
 with Gtk2-Ex-TiedListColumn.  If not, see <http://www.gnu.org/licenses/>.
 
 
+
+Version 2, February 2010
+    - new home page
 
 Version 1, December 2008
     - the first version
