--- a/Changes
+++ b/Changes
@@ -17,6 +17,9 @@ with Gtk2-Ex-TiedListColumn.  If not, see <http://www.gnu.org/licenses/>.
 
 
 
+Version 4, May 2010
+    - new Gtk2::Ex::TiedMenuChildren
+
 Version 3, May 2010
     - new Gtk2::Ex::TiedTreePath
 
