--- a/Changes
+++ b/Changes
@@ -17,6 +17,9 @@ with Gtk2-Ex-TiedListColumn.  If not, see <http://www.gnu.org/licenses/>.
 
 
 
+Version 5, September 2010
+    - TiedMenuChildren fix $VERSION
+
 Version 4, May 2010
     - new Gtk2::Ex::TiedMenuChildren
 
